<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xlab.myworkouttimer.Activity.SettingActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:minHeight="?attr/actionBarSize"
        android:elevation="10dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/layout_horizontal_margin"
                android:paddingRight="@dimen/layout_horizontal_margin"
                android:paddingTop="@dimen/layout_vertical_margin"
                android:paddingBottom="@dimen/layout_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sets_and_times"/>
            </LinearLayout>
            <LinearLayout
                android:onClick="setRestTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/layout_horizontal_margin"
                android:paddingRight="@dimen/layout_horizontal_margin"
                android:paddingTop="@dimen/layout_vertical_margin"
                android:paddingBottom="@dimen/layout_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:text="@string/rest_time"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/sets_and_times"/>
            </LinearLayout>
            <LinearLayout
                android:onClick="setWorkoutTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/layout_horizontal_margin"
                android:paddingRight="@dimen/layout_horizontal_margin"
                android:paddingTop="@dimen/layout_vertical_margin"
                android:paddingBottom="@dimen/layout_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:text="@string/workout_time"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/sets_and_times"/>
            </LinearLayout>
            <LinearLayout
                android:onClick="setReadyTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:paddingLeft="@dimen/layout_horizontal_margin"
                android:paddingRight="@dimen/layout_horizontal_margin"
                android:paddingTop="@dimen/layout_vertical_margin"
                android:paddingBottom="@dimen/layout_vertical_margin"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:text="@string/ready_time"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/sets_and_times"/>
        </LinearLayout>
            <LinearLayout
                android:onClick="setNumberOfSets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/layout_horizontal_margin"
                android:paddingRight="@dimen/layout_horizontal_margin"
                android:paddingTop="@dimen/layout_vertical_margin"
                android:paddingBottom="@dimen/layout_vertical_margin"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="21sp"
                    android:text="@string/number_of_sets"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:text="@string/sets_and_times"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>
